Fix #1746: Apply patch by hamish which sets the virtual memory size to the default minimum instead of zero when the user turns on virtual memory. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40056 a95241bf-73f2-0310-859d-f6bbb57e9c96